Add waist tracking to check-ins
